Update the emails templates

--- a/billing/templates/emails/sign.html
+++ b/billing/templates/emails/sign.html
@@ -1,140 +1,137 @@
+
 {% load i18n %}
-<tr style="background: #fff;">
-    <td colspan="2">
-        <hr style="margin-top: 16px;
-									 height: 1px; 
-									 border:none; 
-									 color:#BDBDBD; 
-									 background-color:#BDBDBD;">
-    </td>
-</tr>
-<tr>
-    <td class="text-wrap" colspan="2" style="background: #fff;
+<td class="text-wrap" colspan="2" 
+								style="background: #fff;
 								padding: 40px;
 								padding-top: 10px;
 								padding-bottom: 30px;">
-        <table width="100%" cellpadding="0" cellspacing="0" style="box-sizing: border-box; 
+									<table width="100%" cellpadding="0" cellspacing="0"
+										style="box-sizing: border-box; 
 										margin: 0;">
-            <tr>
-                <td style="width: 12%;
+										<tr>
+											<td style="width: 12%;
 												vertical-align: top;">
-                    <img src="https://mb-letter.s3-eu-west-1.amazonaws.com/KnBase.png">
-                </td>
-                <td class="support-column" style="vertical-align: top;">
-                    <h2 style="margin: 0px;
+												  <img src="https://mb-letter.s3-eu-west-1.amazonaws.com/knowledgebase01.jpg">
+											</td>
+											<td class="support-column" style="vertical-align: top;">
+												<h2 style="margin: 0px;
 													font-family: 'Lora', Georgia, Serif;
 													font-weight: bold;
 													font-size: 15px;
 													line-height: 22px;
-													     color: #333333;">{% trans "Knowledge Base" %}</h2>
-                    <p style="margin-top: 11px;
+												color: #333333;">{% trans "Knowledge Base" %}</h2>
+												<p style="margin-top: 11px;
 													margin-bottom: 4px;
 													font-family: 'Lora', Georgia, Serif;
 													font-weight: normal;
 													font-size: 15px;
 													line-height: 22px;
 													color: #333333;
-													    ">
-                        {% trans "Don't hesitate to check out our Customer Support Knowledge Base for lots of guiding material that we have prepared for You." %}
-                    </p>
-                    <a href="https://support.maxi-booking.com" style="font-family: 'Lora', Georgia, Serif;
-													font-weight: normal;
-													font-size: 15px;
-													line-height: 22px;
-													   text-decoration: none;">https://support.maxi-booking.com</a>
-                </td>
-            </tr>
-            <tr>
-                <td style="width: 10%;
+													        ">
+                            {% trans "Don't hesitate to check out our Customer Support Knowledge Base for lots of guiding material that we have prepared for You." %}
+												</p>
+                        <a href="https://support.maxi-booking.com" style="font-family: 'Lora', Georgia, Serif;
+													       font-weight: normal;
+													       font-size: 15px;
+													       line-height: 22px;
+													       text-decoration: none;">https://support.maxi-booking.com</a>
+											</td>
+										</tr>
+										<tr>
+											<td style="width: 10%;
 												vertical-align: top;">
-                    <img src="https://mb-letter.s3-eu-west-1.amazonaws.com/TSupport.png" style="padding-top: 35px;">
-                </td>
-                <td class="support-column" style="width: ">
-                    <h2 style="margin: 0px;
+												  <img src="https://mb-letter.s3-eu-west-1.amazonaws.com/helpdesk01.jpg" style="padding-top: 35px;">
+											</td>
+											<td class="support-column" style="width: ">
+												<h2 style="margin: 0px;
 													padding-top: 35px;
 													font-family: 'Lora', Georgia, Serif;
 													font-weight: bold;
 													font-size: 15px;
 													line-height: 22px;
-													     color: #333333;">{% trans "Support" %}</h2>
-                    <p style="margin-top: 11px;
+													         color: #333333;">{% trans "Support" %}</h2>
+												<p style="margin-top: 11px;
 													margin-bottom: 4px;
 													font-family: 'Lora', Georgia, Serif;
 													font-weight: normal;
 													font-size: 15px;
 													line-height: 22px;
-													    color: #333333;">
-                        {% trans "Let us know what you think. We love to hear from You. For feedback and if you have any questions just send us an email" %}
-                    </p>
-                    <a href="mailto:support@maxi-booking.com" style="
-													font-family: 'Lora', Georgia, Serif;
-													font-weight: normal;
-													font-size: 15px;
-													line-height: 22px;
-													   text-decoration: none;">support@maxi-booking.com</a>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <hr style="margin-top: 56px;
+													color: #333333;">
+                            {% trans "Let us know what you think. We love to hear from You. For feedback and if you have any questions just send us an email" %}
+												</p>
+
+                        <a href="mailto:support@maxi-booking.com" style="
+													       font-family: 'Lora', Georgia, Serif;
+													       font-weight: normal;
+													       font-size: 15px;
+													       line-height: 22px;
+													       text-decoration: none;">support@maxi-booking.com</a>
+                      </td>
+										</tr>
+										<tr>
+											<td colspan="2">
+												<hr style="margin-top: 56px;
 													height: 1px; 
 													border:none; 
 													color:#BDBDBD; 
 													background-color:#BDBDBD;">
-                </td>
-            </tr>
-        </table>
-    </td>
-</tr>
-<tr style="background: #fff;">
-    <td colspan="2" class="text-wrap contacts left-column" style="box-sizing: border-box; 
+											</td>
+										</tr>
+									</table>
+								</td>
+							</tr>
+							<tr style="background: #fff;">
+								<td colspan="2" class="text-wrap contacts left-column" 
+									style="box-sizing: border-box; 
 									vertical-align: top;
 									width: 100%;
 									padding-left: 40px;
 									padding-bottom: 30px;">
-        <h4 style="margin: 0;
+									<h4 style="margin: 0;
 										font-family: 'Lora', Georgia, Serif;
 										font-weight: bold;
 										font-size: 15px;
 										line-height: 22px;
-									 color: #828282;">MaxiBooking {% trans "contact info" %}</h4>
-    </td>
-</tr>
-<tr style="background: #fff;">
-    <td class="text-wrap contacts left-column" style="box-sizing: border-box; 
+										         color: #828282;">MaxiBooking {% trans "contact info" %}</h4>
+								</td>	
+							</tr>
+							<tr style="background: #fff;">
+								<td class="text-wrap contacts left-column" 
+									style="box-sizing: border-box; 
 									vertical-align: top;
 									width: 40%;
 									padding-left: 40px;
 									padding-bottom: 30px;">
-        <p style="margin-top: 5px;
+									<p style="margin-top: 5px;
 										font-family: 'Lora', Georgia, Serif;
 										font-weight: normal;
 										font-size: 15px;
 										line-height: 22px;
-									color: #828282;">{% trans "Phone" %}: 8 (800) 200 78 30 <br>
-            E-mail: <a style="font-family: 'Lora', Georgia, Serif;
+										        color: #828282;">{% trans "Phone" %}: 8 (800) 200 78 30<br>
+									E-mail: <a style="font-family: 'Lora', Georgia, Serif;
 										font-weight: normal;
 										font-size: 15px;
 										line-height: 22px;
 										color: #828282;
-										text-decoration: none;" href="mailto:sales@maxi-booking.com">sales@maxi-booking.com</a></p>
-    </td>
-    <td class="text-wrap contacts right-column" style="box-sizing: border-box; 
+										text-decoration: none;" href="mailto:sales@maxi-booking.com">sales@maxi-booking.ru</a></p>
+								</td>
+								<td class="text-wrap contacts right-column" 
+								style="box-sizing: border-box; 
 								vertical-align: top;
 								width: 60%;
 								padding-left: 20px;
 								padding-bottom: 30px;">
-        <p style="margin-top: 0px;
+									<p 
+									style="margin-top: 0px;
 										font-family: 'Lora', Georgia, Serif;
 										font-weight: normal;
 										font-size: 15px;
 										line-height: 22px;
-										color: #828282;">WhatsApp|Viber: +7(910)439-17-71<br>
-            <a style="font-family: 'Lora', Georgia, Serif;
+										color: #828282;">WhatsApp|Viber: +7 (910)439-17-71<br>
+									<a style="font-family: 'Lora', Georgia, Serif;
 										font-weight: normal;
 										font-size: 15px;
 										line-height: 22px;
 										color: #828282;
-										text-decoration: none;" href="https://maxi-booking.com">https://maxi-booking.com</a></p>
-    </td>
-</tr>
+										text-decoration: none;" href="https://maxi-booking.com">https://maxi-booking.ru</a></p>
+								</td>
