--- a/billing/templates/emails/base.html
+++ b/billing/templates/emails/base.html
@@ -1,185 +1,175 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" style="font-family: 'Lora', Georgia, Serif;
+<html xmlns="http://www.w3.org/1999/xhtml" 
+	style="font-family: 'Lora', Georgia, Serif;
 	box-sizing: border-box; 
 	margin: 0;">
-
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>MaxiBooking</title>
-    <link href="https://fonts.googleapis.com/css?family=Lora|Montserrat&display=swap" rel="stylesheet">
-    <style type="text/css">
-        img {
-            max-width: 100%;
-        }
+	<meta name="viewport" content="width=device-width" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<title>Welcome to MaxiBooking</title>
+	<link href="https://fonts.googleapis.com/css?family=Lora|Montserrat&display=swap" rel="stylesheet">
+	<style type="text/css">
+	img {
+		max-width: 100%;
+	}
+	body {
+		-webkit-font-smoothing: antialiased; -webkit-text-size-adjust: none; 
+		width: 100% !important; 
+		height: 100%; 
+		line-height: 28px;
+		background-color: #f6f6f6;
+		color: #333333;
+    font-family: 'Lora', Georgia, Serif !important;
+	}
 
-        body {
-            -webkit-font-smoothing: antialiased;
-            -webkit-text-size-adjust: none;
-            width: 100% !important;
-            height: 100%;
-            line-height: 28px;
-            background-color: #f6f6f6;
-            color: #333333;
-        }
+	h1 {
+		font-size: 22px;
+		line-height: 28px; 
+		margin: 35px 0 40px 
+	}
+	h2 {
+		font-size: 28px;
+		line-height: 36px;
+		font-weight: 500;
+	}
+	h3 {
+		font-size: 16px
+		line-height: 24px;
+		font-weight: bold;	
+	}
+	a{
+		font-size: 14px;
+		line-height: 20px;
+	}
+   p {
+    font-family: 'Lora', Georgia, Serif !important;
+   }
+   .f {
+      font-family: 'Lora', Georgia, Serif !important;
+   }
 
-        h1 {
-            font-size: 22px;
-            line-height: 28px;
-            margin: 35px 0 40px
-        }
+	@media only screen and (max-width: 600px) {
+		table[class="mob-gmail-fix"] {
+          display: none !important;
+    }
+	  body {
+	    padding: 0 !important;
+	    margin-left: auto;
+	    margin-right: auto;
+      font-family: 'Lora', Georgia, Serif !important;
+	  }
 
-        h2 {
-            font-size: 28px;
-            line-height: 36px;
-            font-weight: 500;
-        }
+	  h1 {
+	    font-weight: 800 !important; 
+	    font-size: 16px !important;
+	  }
 
-        h3 {
-            font-size: 16px line-height: 24px;
-            font-weight: bold;
-        }
+	  h2 {
+	    font-weight: 800 !important;
 
-        a {
-            font-size: 14px;
-            line-height: 20px;
-        }
+	     font-size: 14px !important;
+	  }
 
-        p {
-            margin: 10px 0;
-            font-family: 'Lora', Georgia, Serif;
-            font-weight: normal;
-            font-size: 18px;
-            line-height: 26px;
-            color: #333333;
-        }
+	  h3 {
+	    font-weight: 800 !important; 
+	    margin: 20px 0 0 !important;
+	    font-size: 12px !important;
+	  }
 
-        @media only screen and (max-width: 600px) {
-            table[class="mob-gmail-fix"] {
-                display: none !important;
-            }
+	  h4 {
+	    font-weight: 800 !important; 
+	    font-size: 12px !important;
 
-            body {
-                padding: 0 !important;
-                margin-left: auto;
-                margin-right: auto;
-            }
+	  }
 
-            h1 {
-                font-weight: 800 !important;
-                font-size: 16px !important;
-            }
+	  p {
+		font-size: 12px !important;
+		line-height: 18px !important;
+    font-family: 'Lora', Georgia, Serif !important;
+	  }
 
-            h2 {
-                font-weight: 800 !important;
+	  li {
+		font-size: 12px;
+		line-height: 18px;
+	  }
 
-                font-size: 14px !important;
-            }
+	  a {
+		font-size: 12px !important;
+	  }
 
-            h3 {
-                font-weight: 800 !important;
-                margin: 20px 0 0 !important;
-                font-size: 12px !important;
-            }
+	  .mobile-p {
+		font-size: 10px !important;
+		line-height: 14px !important;
+	  }
 
-            h4 {
-                font-weight: 800 !important;
-                font-size: 12px !important;
+	  .mobile-p a {
+		font-size: 10px !important;
+		line-height: 14px !important;
+	  }
 
-            }
+	  .container {
+	    padding: 10px !important; 
+	    width: 100% !important;
+	  }
 
-            p {
-                font-size: 12px !important;
-                line-height: 18px !important;
-                margin: 10px 0;
-                font-family: 'Lora', Georgia, Serif;
-                font-weight: normal;
-                color: #333333;
-            }
+	  .content {
+	    padding: 0 !important;
+	  }
 
-            li {
-                font-size: 12px;
-                line-height: 18px;
-            }
+	  .content-wrap {
+	    padding: 10px !important;
+	  }
 
-            a {
-                font-size: 12px !important;
-            }
+	  .invoice {
+	    width: 100% !important;
+	  }
 
-            .mobile-p {
-                font-size: 10px !important;
-                line-height: 14px !important;
-            }
+	  .header {
+	  	font-size: 6px !important;
+	  }
 
-            .mobile-p a {
-                font-size: 10px !important;
-                line-height: 14px !important;
-            }
+	  
+	  .text-wrap {
+	  	padding: 20px 10px !important;
+	  }
 
-            .container {
-                padding: 10px !important;
-                width: 100% !important;
-            }
+	  .text-wrap hr {
+	  	margin-top: 30px !important;
+	  	margin-bottom: 0px !important;
+	  }
 
-            .content {
-                padding: 0 !important;
-            }
+	  .support-column {
+	  	padding-left: 10px !important;
+	  }
 
-            .content-wrap {
-                padding: 10px !important;
-            }
+	  
+	  .contacts {
+	  	padding: 0px !important;
+	  }
 
-            .invoice {
-                width: 100% !important;
-            }
+	  .left-column {
+	  	padding-left: 10px !important;
+	  	width: 50% !important;
+	  }
 
-            .header {
-                font-size: 6px !important;
-            }
+	  
+	  .right-column {
+	  	padding-right: 10px !important;
+	  	width: 50% !important;
+	  }
 
-
-            .text-wrap {
-                padding: 20px 10px !important;
-            }
-
-            .text-wrap hr {
-                margin-top: 30px !important;
-                margin-bottom: 0px !important;
-            }
-
-            .support-column {
-                padding-left: 10px !important;
-            }
-
-
-            .contacts {
-                padding: 0px !important;
-            }
-
-            .left-column {
-                padding-left: 10px !important;
-                width: 50% !important;
-            }
-
-
-            .right-column {
-                padding-right: 10px !important;
-                width: 50% !important;
-            }
-
-            .contacts p {
-                font-size: 10px !important;
-            }
-
-            .contacts a {
-                font-size: 10px !important;
-            }
-
-        }
-    </style>
+	  .contacts p {
+	  	font-size: 10px !important;
+	  }
+	  .contacts a {
+	  	font-size: 10px !important;
+	  }
+	 
+	}
+	</style>
 </head>
-
-<body itemscope itemtype="http://schema.org/EmailMessage" bgcolor="#f6f6f6" style="font-family: 'Lora', Georgia, Serif; 
+<body itemscope itemtype="http://schema.org/EmailMessage" bgcolor="#f6f6f6"
+style="font-family: 'Lora', Georgia, Serif; 
 box-sizing: border-box; 
 font-size: 18px; 
 -webkit-font-smoothing: antialiased; 
@@ -189,71 +179,57 @@ min-width: 100%;
 height: 100%; 
 background-color: #f6f6f6; 
 margin: 0;">
-    <table cellpadding="0" cellspacing="0" border="0" width="700" style="width: 700px !important; min-width: 700px;" class="mob-gmail-fix">
-        <table style="font-family: 'Lora', Georgia, Serif;
+	<table cellpadding="0" cellspacing="0" border="0" width="700" style="width: 700px !important; min-width: 700px;" class="mob-gmail-fix">
+		<table 
+		style="font-family: 'Lora', Georgia, Serif;
 		box-sizing: border-box; 
 		width: 100%;
 		background-color: #f6f6f6;">
-            <tr>
-                <td class="container" width="680px" style="box-sizing: border-box; 
+			<tr>
+				<td class="container" width="680px" 
+				style="box-sizing: border-box; 
 				vertical-align: top; 
 				display: block !important; 
 				clear: both !important; 
 				margin: 0 auto;
 				padding: 0px;">
-                    <div class="content" style="box-sizing: border-box; 
+					<div class="content" 
+					style="box-sizing: border-box; 
 					display: block;
 					padding: 20px;">
-                        <table width="100%" cellpadding="0" cellspacing="0" style="box-sizing: border-box; 
+						<table width="100%" cellpadding="0" cellspacing="0"
+						style="box-sizing: border-box; 
 						margin: 0;
 						padding-top: 10px;">
-                            <tr>
-                                <td style="box-sizing: border-box; 
-								vertical-align: top;
-								width: 50%;
-								padding-bottom: 10px;">
-                                    <a href="https://maxi-booking.com/"><img src="https://mb-letter.s3-eu-west-1.amazonaws.com/logo.png" alt="Logotype" width="50%"></a>
-                                </td>
-                                <td style="
-								box-sizing: border-box; 
-								width: 50%;
-								padding-bottom: 10px;">
-                                    <p class="header" style="padding: 0px; 
-									margin: 0px; 
-									vertical-align: bottom; 
-									text-align: right;
-									color: #4F4F4F; 
-									font-family: 'Montserrat', Arial, sans-serif; 
-									font-size: 10px; 
-									line-height: 22px; 
-									font-weight: medium;">SOFTWARE FOR SHORT TERM RENTALS AND HOTELS</p>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td colspan="2" bgcolor="#96C828" style="padding-top: 4px;">
-                                    <img src="https://mb-letter.s3-eu-west-1.amazonaws.com/Group2.png" width="100%">
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="text-wrap" colspan="2" style="background: #fff;
+							<tr>
+								<td colspan="2" style="background: url(https://mb-letter.s3-eu-west-1.amazonaws.com/Group1.png) no-repeat; height: 100px; padding: 25px; padding-left: 40px;">
+									<img src="https://mb-letter.s3-eu-west-1.amazonaws.com/logo02.png" height="65px">
+								</td>
+							</tr>
+							<tr>
+								<td class="text-wrap" colspan="2"
+								style="background: #fff;
 								padding: 40px;
 								padding-bottom: 30px;">
-                                    <h1 style="margin: 0px;
+									<h1 style="margin: 0px;
 									font-family: 'Lora', Georgia, Serif;
 									font-weight: bold;
 									font-size: 22px;
 									line-height: 28px;
-									                             color: #333333;">{% block title %}MaxiBooking{% endblock %}</h1>
+									           color: #333333;">{% block title %}MaxiBooking{% endblock %}</h1>
 
-                                    {% block content %}{% endblock %}
-                                </td>
-                            </tr>
-                            {% block sign %}{% endblock %}
-
-                        </table>
-                    </div>
-                </td>
-            </tr>
-        </table>
-    </table>
+                  <p class="style=font-family: 'Lora', Georgia, Serif !important;">
+                      {% block content %}{% endblock %}
+                  </p>
+								</td>
+							</tr>
+							<tr style="font-family: 'Lora', Georgia, Serif !important;">
+                  {% block sign %}{% endblock %}
+							</tr>
+						</table>
+					</div>
+				</td>
+			</tr>
+		</table>
+	</table>
 </body>
