--- a/billing/templates/emails/registration.html
+++ b/billing/templates/emails/registration.html
@@ -19,7 +19,7 @@
 
     <p>To visit Your SMART website simply click on the button below!</p>
     <p>
-        <a href="{{ website }}" class="btn-primary" itemprop="url" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; color: #FFF; text-decoration: none; line-height: 2em; font-weight: bold; text-align: center; cursor: pointer; display: inline-block; border-radius: 0px; text-transform: capitalize; background-color: #ff4632; margin: 0; border-color: #ff4632; border-style: solid; border-width: 10px 20px;">go to your website</a>
+        <a href="{{ website }}" class="btn-primary" itemprop="url" style="font-family: 'Montserrat', sans-serif; font-weight: normal; font-size: 16px; line-height: 26px; color: #fff; text-decoration: none; padding: 15px 35px; background-color: #2DBABA;">go to your website</a>
     </p>
     <p>We are happy only when you sell more with us!</p>
 
